# viscomp2022

./: .gitignore  README.md  version_control.ipynb
Exercises/W6/: W6_exercise.ipynb
Exercises/W7/: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  Readme Linux.txt  Readme OSX.txt  Readme Windows.txt  build.ninja  cmake_install.cmake  colors  colors.cpp  generateBuildLinux.sh  generateBuildOSX.sh  generateBuildWindows.bat  volcano_mesh.raw
Exercises/W7/OpenGL2.1/: colors.cpp
Exercises/W7/OpenGL2.1/shaders/: color.glslf  color.glslv
Exercises/W7/shaders/: color.glslf  color.glslv
